kubernets/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  labels:
    app: apache2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache2
  template:
    metadata:
      labels:
        app: apache2
    spec:
      containers:
      - name: apache2
        image: ubuntu/apache2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: be-service
spec:
  type: ClusterIP
  selector:
     app: apache2
  ports:
  - targetPort: 80
    port: 8008
    name: be-port


#kubectl port-forward service/be-service 9001:8008 , kubectl port-forward service/app-service 9001:8080
#kubectl port-forward service/mon-service 8002:8090  , kubectl get pods -n ingress-nginx
